# CS1D-Class-Project-2

./: .gitignore  MainHeader.h  SQL Commands.txt  baseball_stadiums.sql  gcloud-oauth2.py  graphdelimiterseparation.txt  index.html  params.json
CS1D-Class-Project-2/: CS1D-Class-Project-2.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h
Debug Macro/: .cproject  .project  Output.txt
Generate SQL - Graph Related/: .cproject  .project  inFile.txt  oFileSQL.txt
Generate Strings From Input - Graph Related/: .cproject  .project  inFile.txt
build-CS1D-Class-Project-2-Desktop_Qt_5_4_1_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
cs1dproject/: .gitignore  CS1D-Class-Project-2  CS1D-Class-Project-2.pro  CS1D-Class-Project-2.pro.user.18  CS1D-Class-Project-2.pro.user.3.3-pre1  MainHeader.h  Makefile  Makefile.Debug  Makefile.Release  addstadiumfunctionality.cpp  addstadiumfunctionality.h  backgrounds.qrc  baseball_stadiums  comparators.h  connectdatabase.h  createsouvenirs.cpp  customtripsouvenirs.cpp  datatable.cpp  datatable.h  exceptionclasses.h  findHashKey.cpp  googleComputeInterface.cpp  googleComputeInterface.h  graph.h  hashTable.h  hashTable.h.autosave  heap.h  heapitem.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  mainwindow.ui.autosave  managesouvenirs.cpp  moc_datatable.cpp  moc_mainwindow.cpp  moc_souvenirs.cpp  object_script.CS1D-Class-Project-2.Debug  (+17 more)
cs1dproject/cppconn/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projrscr/: sqlite.h  (+6 more)
(+18 files in other folders)
